# dikualfa

./: CMakeLists.txt  INSTALL_NOTES  act.comm.c  act.informative.c  act.movement.c  act.obj1.c  act.obj2.c  act.offensive.c  act.other.c  act.social.c  act.wizard.c  act_info.c  act_obj2.c  act_offe.c  act_wiza.c  board.c  changes.c  cmake_bcc64.bat  cmake_unix.sh  cmake_vc64.bat  comm.c  comm.h  constants.c  db.c  db.h  delplay.c  fight.c  handler.c  handler.h  insert_any.c  interpreter.c  interpreter.h  limits.c  limits.h  list.c  magic.c  mail.c  maildef.h  makefile  makefile.bor  (+33 more)
doc/: actions.doc  combat.doc  comm.doc  database.doc  dbsup.doc  defs.doc  do_mail  handler.doc  levels.doc  license.doc  look.doc  macro.doc  running.doc  shops.doc  skills.doc  spells.doc  time.doc  values.doc
lib/: actions  credits  help  info  messages  motd  news  poses
